[package]
name = "zillow-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
futures = "0.3.28"
lambda_runtime = "0.8.0"
regex = "1.7.3"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = {version="1.27.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
vercel_runtime = "0.3.4"
tl = "0.7.7"
redis = {version="0.23.0", features = ["tokio-comp"]}
